# hand_skin_detection

./: CMakeLists.txt  README.md  process_directory.cpp  process_directory.h  skin_detection.cpp
